<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:sets="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:background="#eeeef4"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.fule.myapplication.group.utilis.test2.ExpandRecyclerView
            android:layout_marginTop="@dimen/android_width_20"
            android:layout_marginBottom="@dimen/android_width_20"
            android:id="@+id/group_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
          />

        <LinearLayout
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.fule.myapplication.group.groupDetails.GroupDetailsSettingItem
                android:id="@+id/group_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                sets:item_showDivider="true"
                sets:item_showNextPage="true"
                sets:item_showRightImage="true"
                sets:item_titleText="@string/group_icon"
                />

            <com.fule.myapplication.group.groupDetails.GroupDetailsSettingItem
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                sets:item_showDivider="true"
                sets:item_showNextPage="true"
                sets:item_showRightImage="false"
                sets:item_titleText="@string/group_name"
                />

            <com.fule.myapplication.group.groupDetails.GroupDetailsSettingItem
                android:id="@+id/group_declare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                sets:item_showDivider="true"
                sets:item_showNextPage="true"
                sets:item_showRightImage="false"
                sets:item_titleText="@string/group_declare"
                />

            <com.fule.myapplication.group.groupDetails.GroupDetailsSettingItem
                android:id="@+id/group_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                sets:item_showDivider="false"
                sets:item_showNextPage="true"
                sets:item_showRightImage="false"
                sets:item_titleText="@string/group_permission"
                />
        </LinearLayout>

        <LinearLayout
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/android_width_40"
            android:orientation="vertical">

            <com.fule.myapplication.group.groupDetails.GroupDetailsSettingItem
                android:id="@+id/group_msg_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                sets:item_accessoryType="switchbutton"
                sets:item_showDivider="true"
                sets:item_showNextPage="false"
                sets:item_titleText="@string/group_msg_notice"

                />

            <com.fule.myapplication.group.groupDetails.GroupDetailsSettingItem
                android:id="@+id/group_clean_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                sets:item_showDivider="false"
                sets:item_showRightImage="false"
                sets:item_titleText="@string/group_clear_msg"
                sets:item_showNextPage="true"
                />
        </LinearLayout>

        <Button
            android:elevation="20dp"
            android:layout_marginTop="@dimen/android_width_40"
            android:id="@+id/group_dissolve"
            style="@style/common_btn"
            android:background="@drawable/btn_style_confirm"
            android:text="@string/group_dissolve"
            />
    </LinearLayout>


</ScrollView>